basically finished algorithm part

--- a/headers.tex
+++ b/headers.tex
@@ -50,6 +50,8 @@
 \newcommand{\manc}[1]{H\left(#1\right)}
 \newcommand{\tmanc}[1]{\tilde{H}\left(#1\right)}
 \newcommand{\mypar}[1]{\left( #1 \right)}
+\newcommand{\inv}[1]{{#1}^{-1}}
+\newcommand{\pinv}[1]{\inv{\mypar{#1}}}
 \newcommand{\indfunc}[1]{\chi_{#1}}
 
 \newcommand{\bsym}[1]{\boldsymbol{#1}}
@@ -67,6 +69,7 @@
 \newcommand{\vecv}{\bsym{v}}
 \newcommand{\vecpi}{\bsym{\pi}}
 \newcommand{\vecpsi}{\bsym{\psi}}
+\newcommand{\vecs}{\bsym{s}}
 \newcommand{\vecx}{\bsym{x}}
 \newcommand{\vecy}{\bsym{y}}
 \newcommand{\vecz}{\bsym{y}}
